canary/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      track: canary
  template:
    metadata:
      labels:
        app: app
        track: canary
    spec:
      containers:
        - name: app
          image: gcr.io/kuar-demo/kuard-amd64:1
          ports:
            - containerPort: 8080
