canary/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-canary
spec:
  selector:
    app: app
    track: canary
  ports:
    - port: 80
      targetPort: 8080
