canary/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-stable
spec:
  selector:
    app: app
    track: stable
  ports:
    - port: 80
      targetPort: 8080
