canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-canary
spec:
  selector:
    app: app-canary
  ports:
    - port: 80
      targetPort: 8080
